# deeplearning_ai_courses_downloader

./: .gitignore  INSTALL.md  README.md  auth.py  cli.py  course.py  downloader.py  main.py  models.py  pyproject.toml  urls.py  user.py  utils.py
