[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dl-ai"
version = "0.1.0"
description = "Download courses from DeepLearning.AI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Karim Elgazar", email = "kmelgazar@gmail.com"},
]
keywords = ["deeplearning", "ai", "course", "downloader", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.28.0",
    "yt-dlp>=2023.1.0",
    "tqdm>=4.64.0",
    "pydantic>=2.0.0",
    "browser-cookie3>=0.20.1",
]

[project.scripts]
dl-ai = "cli:main"

[tool.setuptools]
py-modules = ["cli", "course", "downloader", "models", "user", "auth"]

[project.urls]
Homepage = "https://github.com/yourusername/dl-ai"
Repository = "https://github.com/yourusername/dl-ai"
Issues = "https://github.com/yourusername/dl-ai/issues"

